force-app/main/default/objects/PowerBI_Report__c/PowerBI_Report__c.object-meta.xml
<CustomObject>
    <label>Power BI Report</label>
    <pluralLabel>Power BI Reports</pluralLabel>
    <nameField>
        <label>Report Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>