force-app/main/default/objects/PowerBI_Report__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <description>Report description for administrators</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>