force-app/main/default/objects/PowerBI_Report__c/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <label>Display Name</label>
    <description>User-friendly report name shown in sidebar navigation</description>
    <required>true</required>
    <type>Text</type>
    <length>255</length>
</CustomField>