force-app/main/default/objects/PowerBI_Report__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <description>Controls report visibility in component. Only active reports are displayed.</description>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>