force-app/main/default/objects/PowerBI_Report__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <label>Sort Order</label>
    <description>Display order in sidebar navigation. Lower numbers appear first. Use increments of 10 (10, 20, 30) to allow for easy reordering.</description>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>