force-app/main/default/objects/PowerBI_Report__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <label>Report URL</label>
    <description>Power BI embed URL for the report</description>
    <required>true</required>
    <type>Url</type>
</CustomField>